[package]
name = 'controller-remap'
description = 'Remap controller to keyboard and mouse inputs'
license-file = 'LICENSE'
version = '1.0.0'
edition = '2024'

[dependencies]
duration-str = '*'
enigo = { version = '*', default-features = false, features = ['serde', 'wayland'] }
gilrs = { version = '*', default-features = false, features = ['serde', 'xinput'] }
serde = { version = '*', default-features = false }
serde-inline-default = { version = '*', default-features = false }
shlex = { version = '*', default-features = false }
singleton-process = '*'
tokio = { version = '*', default-features = false, features = ['macros', 'rt-multi-thread', 'time'] }
toml = '*'

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = '*', default-features = false, features = ['signal'] }
