[package]
name = 'controller-remap'
description = 'Remap controller to keyboard and mouse inputs'
license-file = 'LICENSE'
version = '1.0.0'
edition = '2024'

[dependencies]
duration-str = '*'
enigo = { version = '*', default-features = false, features = ['serde', 'wayland'] }
gilrs = { version = '*', default-features = false, features = ['serde', 'xinput'] }
serde = '*'
serde-inline-default = '*'
shlex = { version = '*', default-features = false }
singleton-process = '*'
tokio = { version = '*', features = ['macros', 'rt-multi-thread', 'time'] }
toml_edit = { version = '*', features = ['serde'] }

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = '*', features = ['signal'] }
